@@ -1,5 +1,9 @@
 package com.ssafy.enjoytrip.everywhere.map.service;
 
+
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.ssafy.enjoytrip.everywhere.map.dto.response.AttractionRedisResponse;
 import com.ssafy.enjoytrip.everywhere.map.dto.response.AttractionSimpleResponse;
 import com.ssafy.enjoytrip.everywhere.map.dto.response.AttractionsResponse;
 import com.ssafy.enjoytrip.everywhere.map.mapper.AttractionMapper;
@@ -7,15 +11,18 @@ import com.ssafy.enjoytrip.everywhere.map.repository.AttractionRepository;
 import com.ssafy.enjoytrip.everywhere.map.util.LatLng;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+
 @Service
 @RequiredArgsConstructor
 public class MapService {
-
+    private final StringRedisTemplate redisTemplate;
+    private final ObjectMapper objectMapper;
     private final AttractionRepository attractionRepository;
     private final AttractionMapper attractionMapper;
 
@@ -25,21 +32,14 @@ public class MapService {
                 .toList());
     }
 
-    public AttractionsResponse getAttractionsByContentType(Integer contentTypeId) {
-        return new AttractionsResponse(attractionRepository.findByContentTypeId(contentTypeId)
-                .stream()
-                .map(attractionMapper::toSimpleResponse)
-                .toList());
-    }
-
     public AttractionsResponse getAttractionsByBoundsWithZoom(String swLatLng, String neLatLng, int zoomLevel) {
         LatLng sw = LatLng.fromString(swLatLng);
         LatLng ne = LatLng.fromString(neLatLng);
 
         return new AttractionsResponse(attractionRepository.findWithinBoundsWithLimit(
-                        sw.lat(), ne.lat(), sw.lng(), ne.lng(),
-                        PageRequest.of(0, selectLimit(zoomLevel))
-                )
+                sw.lat(), ne.lat(), sw.lng(), ne.lng(),
+                PageRequest.of(0, selectLimit(zoomLevel))
+        )
         );
     }
 
@@ -58,9 +58,53 @@ public class MapService {
         return limit;
     }
 
-    public List<AttractionSimpleResponse> findByIds(List<Long> contentIds) {
-        return attractionRepository.findByContentIdIn(contentIds)
-                .stream().map(AttractionSimpleResponse::from)
-                .collect(Collectors.toList());
+    public AttractionsResponse getAttractionsByBounds(String swLatLng, String neLatLng) {
+        LatLng sw = LatLng.fromString(swLatLng);
+        LatLng ne = LatLng.fromString(neLatLng);
+
+        return new AttractionsResponse(
+                attractionRepository.findWithinBounds(sw.lat(), ne.lat(), sw.lng(), ne.lng())
+                        .stream()
+                        .map(attractionMapper::toSimpleResponse)
+                        .toList()
+        );
     }
+
+    public AttractionsResponse getAttractionsByCategory(String category) {
+        return new AttractionsResponse(
+                attractionRepository.findByCategory(category).stream()
+                        .map(attractionMapper::toSimpleResponse)
+                        .toList()
+        );
+    }
+
+    /**
+     *
+     * vue 테스트를 위한 더미 값 반환
+     */
+    public AttractionsResponse getAllAttractionsFromCache() {
+        Map<Object, Object> cached = redisTemplate.opsForHash().entries("attractions:hash");
+        List<AttractionSimpleResponse> result = new ArrayList<>();
+
+        for (Object value : cached.values()) {
+            AttractionRedisResponse dto = objectMapper.convertValue(value, AttractionRedisResponse.class);
+            result.add(new AttractionSimpleResponse(
+                    dto.getContentId(),
+                    dto.getTitle(),
+                    0, // contentTypeId 없음
+                    dto.getLatitude(),
+                    dto.getLongitude(),
+                    0, 0, 0, // areaCode, siGunGuCode, mapLevel 없음
+                    null,
+                    dto.getAddress(),
+                    dto.getFirstImage(),
+                    null, // secondImage 없음
+                    dto.getCategory()
+            ));
+        }
+
+        return new AttractionsResponse(result);
+    }
+
+
 }
